// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should be able to create an attribute, returning a promise 1`] = `
Object {
  "data": Object {
    "displayName": "Test 1",
    "id": "test1",
    "organizationId": "SplitTesting",
    "trafficTypeId": "userTT",
  },
  "response": Object {
    "dataType": "STRING",
    "description": "",
    "displayName": "French name",
    "id": "frname",
    "isSearchable": false,
    "organizationId": "SplitTesting",
    "trafficTypeId": "userTT",
  },
}
`;

exports[`it should be able to create an attribute, returning a promise 2`] = `
Object {
  "data": Object {
    "displayName": "Test 2",
    "id": "test2",
    "organizationId": "SplitTesting",
    "trafficTypeId": "machineTT",
  },
  "response": Object {
    "dataType": "STRING",
    "description": "Name of the machine running the API",
    "displayName": "Machine Name",
    "id": "mname",
    "isSearchable": false,
    "organizationId": "SplitTesting",
    "trafficTypeId": "machineTT",
  },
}
`;

exports[`it should be able to delete an attribute, returning a promise 1`] = `true`;

exports[`it should be able to delete an attribute, returning a promise 2`] = `true`;

exports[`it should be able to list the attributes given a traffic type id, returning a promise 1`] = `
Object {
  "objects": Array [
    Object {
      "dataType": "STRING",
      "description": "First name",
      "displayName": "Name",
      "id": "1",
      "trafficTypeId": "1",
    },
    Object {
      "dataType": "STRING",
      "description": "Last name",
      "displayName": "LName",
      "id": "2",
      "trafficTypeId": "1",
    },
  ],
}
`;

exports[`it should be able to list the attributes given a traffic type id, returning a promise 2`] = `
Object {
  "objects": Array [
    Object {
      "dataType": "STRING",
      "description": "Name of the machine",
      "displayName": "MachineName",
      "id": "1",
      "trafficTypeId": "2",
    },
    Object {
      "dataType": "STRING",
      "description": "IP of the machine",
      "displayName": "MachineIP",
      "id": "2",
      "trafficTypeId": "2",
    },
  ],
}
`;
